--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "redaxios": "^0.5.1",
     "setimmediate": "^1.0.5",
     "sharp": "^0.30.7",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
+    "tocbot": "^4.21.0",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
